# cosa

./: .gitignore  .gitmodules  LICENSE  README.md  env.sh  pyproject.toml
configs/arch/: simba.yaml  simba_dse.yaml  simba_dse_v3.yaml  simba_v3.yaml
configs/workloads/alexnet_graph/: _outputs_210.yaml  _outputs_input.10.yaml  _outputs_input.4.yaml  _outputs_input.8.yaml  layer_count.yaml  unique_layers.yaml
configs/workloads/alexnet_pad_graph/: unique_layers.yaml
configs/workloads/deepbench_graph/: 01_DeepSpeech.yaml  04_DeepSpeech.yaml  07_OCR.yaml  08_OCR.yaml  09_OCR.yaml  10_OCR.yaml  18_Vision.yaml  24_Vision.yaml  26_Vision.yaml  27_Vision.yaml  28_Vision.yaml  29_Vision.yaml  32_Vision.yaml  34_Vision.yaml  35_Vision.yaml  36_Vision.yaml  41_Vision.yaml  42_KWS.yaml  46_FaceRecognition.yaml  50_FaceRecognition.yaml  51_FaceRecognition.yaml  53_FaceRecognition.yaml  (+14 more)
gemmini/: gen_ansor.py  out  results.txt  run_mapper.py  utils.py
gemmini/arch/: arch.yaml  arch_cosa.yaml  arch_debug.yaml  gemmini_transformer.yaml
gemmini/calibration/: run.sh
gemmini/mapspace/: .mapspace.yaml.swp  mapspace.yaml  mapspace_cosa.yaml
gemmini/prob/: prob_debug.yaml
src/: bo.py  cosa.py  cosa_2levels.py  cosa_constants.py  cosa_input_objs.py  eval_dse.py  gen_layer_count.py  parse_dataset_csv.py  parse_dse.py  parse_workload.py  run.sh  run_arch.py  run_bo.sh  run_config.py  run_dnn_models.py  train_obj.py  utils.py
src/cosa/: __init__.py  check_timeloop_version.py  cosa.py  cosa_input_objs.py  parse_workload.py  run_config.py  utils.py
src/nocsim/: README.md
(+323 files in other folders)
